Fix alignment issue for weekly thread link flairs. Fixes #9.

--- a/sass/thread.scss
+++ b/sass/thread.scss
@@ -270,10 +270,10 @@ span.score {
     &.self {
         a.thumbnail {
             border: 1px solid #403a34;
-            margin-top: 1px;
             box-shadow: inset 0 0 5px rgba(3, 0, 0, .4);
             @include retina-sprite($lf-0-sun-group);
-            margin: 10px 25px 10px 7px
+            margin: 2px 25px 10px 7px;
+            box-shadow: 0 0 0 1px #000;
         }
     }
 }
